# dolma_pipeline

./: .gitignore  01_setup_filter_urls.sh  02_submit_slurm_jobs.sh  03_process_batch.sh  batch_script.sh  batch_script_hplt.sh  batch_script_pj1.sh  batch_script_pj2.sh  config.sh  datasets.py  models.py  process_batch_duckdb.py  process_pipeline.py  pyproject.toml  setup_pipeline.py
