[project]
name = "dolma-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.2.2",
    "huggingface-hub>=0.31.1",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "tldextract>=5.3.0",
]
